force-app/main/default/objects/bpats__ATS_Record_Action__e/bpats__ATS_Record_Action__e.object-meta.xml
<CustomObject>
    <label>ATS Record Action</label>
    <pluralLabel>ATS Record Actions</pluralLabel>
</CustomObject>