force-app/main/default/objects/bpats__ATS_Record_Action__e/fields/bpats__Event_Type__c.field-meta.xml
<CustomField>
    <fullName>bpats__Event_Type__c</fullName>
    <label>Event Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>