force-app/main/default/objects/bpats__ATS_Record_Action__e/fields/bpats__Object_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>bpats__Object_Api_Name__c</fullName>
    <label>Object Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>