force-app/main/default/objects/bpats__ATS_Record_Action__e/fields/bpats__Payload__c.field-meta.xml
<CustomField>
    <fullName>bpats__Payload__c</fullName>
    <label>Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>