force-app/main/default/objects/bpats__ATS_Record_Action__e/fields/bpats__Record_Id__c.field-meta.xml
<CustomField>
    <fullName>bpats__Record_Id__c</fullName>
    <label>Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>